# MediaFramework

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
AudioDecoder/: CMakeLists.txt
AudioDecoder/header/: pch.h
AudioDecoder/src/: main.cpp
Data/: ALR_Video.esp
Data/Scripts/: ALR_Video.pex  MediaLoadScreens.pex
Data/Scripts/Source/: ALR_Video.psc  MediaLoadScreens.psc
MediaFramework/: CMakeLists.txt
MediaFramework/header/: Globals.h  Hooks.h  MediaFileResolver.h  PCH.h  Renderer.h  SharedMemoryUtils.h
MediaFramework/include/: MediaFrameworkAPI.h
MediaFramework/src/: D3DUtils.cpp  D3DUtils.h  DecoderManager.cpp  DecoderManager.h  Globals.cpp  Hooks.cpp  ImageLoader.cpp  ImageLoader.h  LoadingMenuVideoSupport.cpp  LoadingMenuVideoSupport.h  MediaFileResolver.cpp  MediaFrameworkAPI.cpp  MediaFrameworkINI.cpp  MediaFrameworkINI.h  MediaFrameworkMenu.cpp  MediaFrameworkMenu.h  PCH.h  Renderer.cpp  ScaleformTextureHelper.cpp  ScaleformTextureHelper.h  SharedMemoryUtils.cpp  main.cpp
Plugins/DynamicTextures/: CMakeLists.txt
Plugins/DynamicTextures/header/: PCH.h
Plugins/DynamicTextures/include/: DynamicTexturesAPI.h
Plugins/DynamicTextures/src/: PCH.h  main.cpp
Plugins/MediaLoadScreens/: CMakeLists.txt
Plugins/MediaLoadScreens/cmake/: Version.h.in  version.rc.in
Plugins/MediaLoadScreens/header/: Events.h  PCH.h
Plugins/MediaLoadScreens/include/: MediaLoadScreensAPI.h
Plugins/MediaLoadScreens/src/: Events.cpp  Events.h  MediaLoadScreensAPI.cpp  PCH.h  main.cpp
Plugins/VideoOverlay/: CMakeLists.txt
Plugins/VideoOverlay/header/: PCH.h
Plugins/VideoOverlay/include/: VideoOverlayAPI.h
Plugins/VideoOverlay/src/: Events.cpp  Events.h  PCH.h  main.cpp
VideoDecoder/: CMakeLists.txt
VideoDecoder/cmake/: Version.h.in
VideoDecoder/header/: pch.h
VideoDecoder/src/: main.cpp  pch.h
scripts/: download_ffmpeg.ps1  setup.bat
triplets/: x64-windows-static-ffmpeg-dynamic.cmake
